--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -16,10 +16,10 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build backend image
-        run: docker build ./first-backend --file Dockerfile --tag backend_image
+        run: docker build ./first-backend --tag backend_image
 
       - name: Build db image
-        run: docker build ./db --file Dockerfile --tag db_image
+        run: docker build ./db --tag db_image
 
       - name: Log into registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
@@ -35,10 +35,10 @@ jobs:
           [ "$VERSION" == "master" ] && VERSION=latest
           echo IMAGE_ID=$IMAGE_ID
           echo VERSION=$VERSION
-          docker tag image $IMAGE_ID:$VERSION
+          docker tag backend_image $IMAGE_ID:$VERSION
           docker push $IMAGE_ID:$VERSION
 
-      - name: Push backend image
+      - name: Push db image
         run: |
           IMAGE_ID=docker.pkg.github.com/${{ github.repository }}/db
           # Strip git ref prefix from version
@@ -49,5 +49,5 @@ jobs:
           [ "$VERSION" == "master" ] && VERSION=latest
           echo IMAGE_ID=$IMAGE_ID
           echo VERSION=$VERSION
-          docker tag image $IMAGE_ID:$VERSION
+          docker tag db_image $IMAGE_ID:$VERSION
           docker push $IMAGE_ID:$VERSION
