--- a/first-backend/package.json
+++ b/first-backend/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "scripts": {
     "start": "node .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prettier": "prettier \"**/*.{js,json}\" --write"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "pg-promise": "^10.4.4"
+    "pg-promise": "^10.4.4",
+    "prettier": "^2.0.2"
   }
 }
