--- a/first-backend/package.json
+++ b/first-backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "multer": "^1.4.2",
     "pg-promise": "^10.4.4",
     "prettier": "^2.0.2"
   }
