--- a/.github/workflows/dockerpublish.yml
+++ b/.github/workflows/dockerpublish.yml
@@ -16,12 +16,33 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Build db image
+        run: docker build ./db --tag db
+
       - name: Build backend image
         run: docker build ./first-backend --tag backend
+
+      - name: Build frontend image
+        run: docker build ./first-react-app --tag frontend
 
       - name: Log into registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login docker.pkg.github.com -u ${{ github.actor }} --password-stdin
 
+      - name: Push db image
+        run: |
+          IMAGE_ID=docker.pkg.github.com/${{ github.repository }}/db
+          
+          # Change all uppercase to lowercase
+          IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
+
+          VERSION=latest
+
+          echo IMAGE_ID=$IMAGE_ID
+          echo VERSION=$VERSION
+
+          docker tag db $IMAGE_ID:$VERSION
+          docker push $IMAGE_ID:$VERSION
+          
       - name: Push backend image
         run: |
           IMAGE_ID=docker.pkg.github.com/${{ github.repository }}/backend
@@ -35,4 +56,19 @@ jobs:
           echo VERSION=$VERSION
 
           docker tag backend $IMAGE_ID:$VERSION
+          docker push $IMAGE_ID:$VERSION
+          
+      - name: Push frontend image
+        run: |
+          IMAGE_ID=docker.pkg.github.com/${{ github.repository }}/frontend
+          
+          # Change all uppercase to lowercase
+          IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
+
+          VERSION=latest
+
+          echo IMAGE_ID=$IMAGE_ID
+          echo VERSION=$VERSION
+
+          docker tag frontend $IMAGE_ID:$VERSION
           docker push $IMAGE_ID:$VERSION
